// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Button Dev 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    disabled={false}
    type="button"
  >
    Dev
  </button>
</div>
`;

exports[`Storyshots Component API/Button Icons 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <button
      className="fd-button fd-button--emphasized sap-icon--cart"
      type="button"
    >
      Add to Cart
    </button>
    <button
      className="fd-button sap-icon--cart"
      type="button"
    >
      Add to Cart
    </button>
    <button
      className="fd-button fd-button--transparent sap-icon--filter"
      type="button"
    >
      Filter
    </button>
    <button
      className="fd-button fd-button--positive sap-icon--accept"
      type="button"
    >
      Approve
    </button>
    <button
      className="fd-button fd-button--negative sap-icon--decline"
      type="button"
    >
      Reject
    </button>
    <div
      className="break"
    />
    <button
      className="fd-button fd-button--emphasized sap-icon--alert"
      type="button"
    />
    <button
      aria-label="Add to cart"
      className="fd-button sap-icon--cart"
      type="button"
    />
    <button
      aria-label="Filter"
      className="fd-button fd-button--transparent sap-icon--cart"
      type="button"
    />
    <button
      aria-label="Accept"
      className="fd-button fd-button--positive sap-icon--accept"
      type="button"
    />
    <button
      aria-label="Decline"
      className="fd-button fd-button--negative sap-icon--decline"
      type="button"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Button Options 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <button
      className="fd-button fd-button--emphasized"
      type="button"
    >
      Emphasized Button
    </button>
    <button
      className="fd-button"
      type="button"
    >
      Default Button
    </button>
    <button
      className="fd-button fd-button--transparent"
      type="button"
    >
      Transparent Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button Primary 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Component API/Button Sizes 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <button
      className="fd-button"
      type="button"
    >
      Default
    </button>
    <button
      className="fd-button fd-button--compact"
      type="button"
    >
      Compact
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button States 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <button
      className="fd-button"
      type="button"
    >
      Default
    </button>
    <button
      className="fd-button is-selected"
      selected={true}
      type="button"
    >
      Selected
    </button>
    <button
      className="fd-button is-disabled"
      disabled={true}
      type="button"
    >
      Disabled
    </button>
    <div
      className="break"
    />
    <button
      className="fd-button fd-button--emphasized"
      type="button"
    >
      Emphasized
    </button>
    <button
      className="fd-button fd-button--emphasized is-selected"
      selected={true}
      type="button"
    >
      Emphasized
    </button>
    <button
      className="fd-button fd-button--emphasized is-disabled"
      disabled={true}
      type="button"
    >
      Emphasized
    </button>
    <div
      className="break"
    />
    <button
      className="fd-button fd-button--transparent"
      type="button"
    >
      Transparent
    </button>
    <button
      className="fd-button fd-button--transparent is-selected"
      selected={true}
      type="button"
    >
      Transparent
    </button>
    <button
      className="fd-button fd-button--transparent is-disabled"
      disabled={true}
      type="button"
    >
      Transparent
    </button>
    <div
      className="break"
    />
    <button
      className="fd-button fd-button--positive"
      type="button"
    >
      Positive Button
    </button>
    <button
      className="fd-button fd-button--positive is-selected"
      selected={true}
      type="button"
    >
      Positive Button
    </button>
    <button
      className="fd-button fd-button--positive is-disabled"
      disabled={true}
      type="button"
    >
      Positive Button
    </button>
    <div
      className="break"
    />
    <button
      className="fd-button fd-button--negative"
      type="button"
    >
      Negative Button
    </button>
    <button
      className="fd-button fd-button--negative is-selected"
      selected={true}
      type="button"
    >
      Negative Button
    </button>
    <button
      className="fd-button fd-button--negative is-disabled"
      disabled={true}
      type="button"
    >
      Negative Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button Types 1`] = `
<div
  dir="ltr"
>
  <div
    className="fr-container"
  >
    <button
      className="fd-button"
      type="button"
    >
      Default Button
    </button>
    <button
      className="fd-button fd-button--standard"
      type="button"
    >
      Standard Button
    </button>
    <button
      className="fd-button fd-button--positive"
      type="button"
    >
      Positive Button
    </button>
    <button
      className="fd-button fd-button--negative"
      type="button"
    >
      Negative Button
    </button>
  </div>
</div>
`;
